# FinAItrade

./: AGENTS.md  SUPABASE_SETUP.md  package-lock.json  package.json  supabase-schema.sql  worklog.md
backend/: README.md  fastmcp_source.txt  fastmcp_source_utf8.txt  generate_seed.py  main.py  operaciones_ganadoras.csv  pyproject.toml  requirements.txt  run.py  seed_data.sql  session_stats.csv  sse_help.txt  sse_transport_source.py  supabase_schema.sql  test_body.json  test_res.json  test_res.txt
backend/api/: agents.py  mcp_router.py  trackers.py  training.py
backend/core/: config.py  supabase_client.py
backend/loss_history/: Ind013_loss.csv  Ind015_loss.csv  Ind020_loss.csv  Ind021_loss.csv  Ind022_loss.csv  Ind023_loss.csv  Ind024_loss.csv  Ind026_loss.csv  Ind027_loss.csv  Ind028_loss.csv  Ind029_loss.csv  Ind030_loss.csv  Ind031_loss.csv  Ind032_loss.csv  Ind033_loss.csv  Ind034_loss.csv  Ind035_loss.csv  Ind036_loss.csv  Ind037_loss.csv  Ind038_loss.csv  Ind039_loss.csv  Ind040_loss.csv  Ind047_loss.csv  Ind048_loss.csv  Ind049_loss.csv  Ind051_loss.csv  Ind053_loss.csv  Ind054_loss.csv  Ind055_loss.csv  Ind064_loss.csv  Ind067_loss.csv  Ind076_loss.csv  Ind105_loss.csv  Ind107_loss.csv
backend/models/: model_Ind013_gen_3.keras  model_Ind015_gen_4.keras  model_Ind020_gen_4.keras  model_Ind021_gen_12.keras  model_Ind021_gen_4.keras  model_Ind022_gen_12.keras  model_Ind023_gen_5.keras  model_Ind024_gen_4.keras  model_Ind024_gen_5.keras  model_Ind026_gen_4.keras  model_Ind027_gen_4.keras  model_Ind030_gen_4.keras  model_Ind033_gen_4.keras  model_ind_001_gen_1.h5  (+18 more)
(+42 files in other folders)
